syntax = "proto3";

package api.role.v1;

import "validate/validate.proto";
import "google/protobuf/empty.proto";
import "errors/errors.proto";
import "google/api/annotations.proto";

option go_package = "easyCasbin/api/role/v1;v1";
option java_multiple_files = true;
option java_package = "api.role.v1";

enum DomainRoleError {
	// 设置缺省错误码
	option (errors.default_code) = 500;

	// 内部错误
	INTERNAL_ERR = 0 [(errors.code) = 500];
	// 域角色不存在
	DOMAIN_ROLE_NOT_FOUND = 1 [(errors.code) = 404];
	// 参数错误
	INVALID_ARGS = 2 [(errors.code) = 400];
	// 域角色已存在
	DOMAIN_ROLE_EXIST = 3 [(errors.code) = 409];
}

service DomainRole {
	// 获取所有域
	rpc GetAllDomains(google.protobuf.Empty) returns (GetAllDomainsRpl) {
		option (google.api.http) = {
			get: "/easyCasbin/api/v1/domains"
		};
	};
	// 添加域角色
	rpc AddDomainRole(AddDomainRoleReq) returns (AddDomainRoleRpl) {
		option (google.api.http) = {
			post: "/easyCasbin/api/v1/domain_role"
			body: "*"
		};
	};
	// 更新域角色信息
	rpc UpdateRoleInfo(UpdateDomainRoleReq) returns (UpdateDomainRoleRpl) {
		option (google.api.http) = {
			put: "/easyCasbin/api/v1/domain_role"
			body: "*"
		};
	};
	// DeleteRole 删除对应域的角色
	rpc DeleteRole(DeleteDomainRoleReq) returns (DeleteDomainRoleRpl) {
		option (google.api.http) = {
			delete: "/easyCasbin/api/v1/domain_role"
		};
	};
	// GetDomainRoles 获取指定域下角色列表
	rpc GetDomainRoles(GetDomainRolesReq) returns (GetDomainRolesRpl) {
		option (google.api.http) = {
			get: "/easyCasbin/api/v1/domain_roles/{domainName}"
		};
	};
	// GetSubsInDomainRole 获取指定域角色下所有鉴权主体，包括用户与角色
	rpc GetSubsInDomainRole(GetSubsInDomainRoleReq) returns (GetSubsInDomainRoleRpl) {
		option (google.api.http) = {
			get: "/easyCasbin/api/v1/subsInDomainRole"
		};
	};
	// AddRoleForSubInDomain 为用户添加域角色或者为角色继承另一个角色权限
	rpc AddRoleForSubInDomain(AddRoleForSubInDomainReq) returns (AddRoleForSubInDomainRpl){
		option (google.api.http) = {
			post: "/easyCasbin/api/v1/domain_roles/{domain}/{sub}/role"
			body: "*"
		};
	};
	// DeleteRoleForSubInDomain 删除角色下subject（鉴权主体）
	rpc DeleteRoleForSubInDomain(DeleteRoleForSubInDomainReq) returns (DeleteRoleForSubInDomainRpl) {
		option (google.api.http) = {
			delete: "/easyCasbin/api/v1/domain_roles/{domain}/role_sub"
		};
	};
}


message AddDomainRoleReq {
	string domainName = 1 [(validate.rules).string.pattern="^[0-9a-zA-Z_]{1,}$"];
	string roleName = 2 [(validate.rules).string.pattern="^[0-9a-zA-Z_]{1,}$"];
}

message AddDomainRoleRpl {
	message Data {
		int32 id = 1;
		int32 creatTime = 2;
		string name = 3;
		string domain = 4;
	}
	uint32 code = 1;
	string message = 2;
	Data data = 3;
}

message UpdateDomainRoleReq {
	string domainName = 1 [(validate.rules).string.pattern="^[0-9a-zA-Z_]{1,}$"];
	string roleName = 2 [(validate.rules).string.pattern="^[0-9a-zA-Z_]{1,}$"];
	string newRoleName = 3 [(validate.rules).string.pattern="^[0-9a-zA-Z_]{1,}$"];
}

message UpdateDomainRoleRpl {
	message Data {
		int32 id = 1;
		int32 updateTime = 2;
		string name = 3;
		string domain = 4;
	}
	uint32 code = 1;
	string message = 2;
	Data data = 3;
}

message DeleteDomainRoleReq {
	string domainName = 1 [(validate.rules).string.pattern="^[0-9a-zA-Z_]{1,}$"];
	string roleName = 2 [(validate.rules).string.pattern="^[0-9a-zA-Z_]{1,}$"];
}

message DeleteDomainRoleRpl {
	message Data {
		int32 deleteTime = 1;
	}
	uint32 code = 1;
	string message = 2;
	Data data = 3;
}

message GetAllDomainsRpl {
	message Data {
		int32 id = 1;
		string domain = 2;
		string name = 3;
	}
	uint32 status = 1;
	string message = 2;
	repeated Data data = 3;
}

message GetDomainRolesReq {
	string domainName = 1 [(validate.rules).string.pattern="^[0-9a-zA-Z_]{1,}$"];
	string roleName = 2;
	int32 pageSize = 3 [(validate.rules).int32.gt=0];
	int32 pageNum = 4 [(validate.rules).int32.gt=0];
}

message GetDomainRolesRpl {
	message Role {
		int32 id = 1;
		string name = 2;
		string domain = 3;
	}

	message Data {
		repeated Role roles = 2;
		int32 total = 3;
	}

	uint32 status = 1;
	string message = 2;
	Data data = 3;
}

message AddRoleForSubInDomainReq {
	// eg: user:zhouzy1 or role:admin
	string sub = 1 [(validate.rules).string.pattern="^(.*):(.*)$"];
	// eg: domain:domain1
	string domain = 2 [(validate.rules).string.pattern="^(.*):(.*)$"];
	// eg: role:common
	string role = 3 [(validate.rules).string.pattern="^(.*):(.*)$"];
}

message AddRoleForSubInDomainRpl {
	uint32 code = 1;
	string message = 2;
}

message GetSubsInDomainRoleReq {
	string domainName = 1 [(validate.rules).string.min_len=1];
	string roleName = 2 [(validate.rules).string.min_len=1];
}

message GetSubsInDomainRoleRpl {
	message Data {
		string id = 1;
		string name = 2;
	}
	uint32 code = 1;
	string message = 2;
	repeated Data data = 3;
}

message DeleteRoleForSubInDomainReq {
	// eg: user:zhouzy1 or role:admin
	string sub = 1 [(validate.rules).string.pattern="^(.*):(.*)$"];
	// eg: domain:domain1
	string domain = 2 [(validate.rules).string.pattern="^(.*):(.*)$"];
	// eg: role:common
	string role = 3 [(validate.rules).string.pattern="^(.*):(.*)$"];
}

message DeleteRoleForSubInDomainRpl {
	uint32 code = 1;
	string message = 2;
}